<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="discover_header">Hi there! How are you feeling today?</string>
    <string name="discover_read_the_room_title">Read the room</string>
    <string name="discover_read_the_room_description">Take a picture of your surroundings and we\'ll suggest you songs</string>
    <string name="discover_read_the_room_button">Try it</string>
    <string name="mood_chill">Chill</string>
    <string name="mood_happy">Happy</string>
    <string name="mood_party">Party</string>
    <string name="mood_fun">Fun</string>
    <string name="mood_workout">Workout</string>
    <string name="mood_focused">Focused</string>
    <string name="mood_epic">Epic</string>
    <string name="mood_romantic">Romantic</string>
    <string name="mood_dreamy">Dreamy</string>
    <string name="mood_nostalgic">Nostalgic</string>
    <string name="mood_sad">Sad</string>
    <string name="mood_angry">Angry</string>
    <string name="mood_road_trip">Road trip</string>
    <string name="error">Error</string>
    <string name="ok">Ok</string>
    <string name="camera_permission_not_granted">Please grant camera permissions to use this feature.</string>
</resources>